--- a/Real-Time Screen Monitor/templates/signup.html
+++ b/Real-Time Screen Monitor/templates/signup.html
@@ -82,22 +82,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up - Social Network</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="signup-container">
+    <div class="container">
         <h1>Sign Up</h1>
         <form action="/signup" method="POST">
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" required>
-            
+
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
 
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
-            
+
             <button type="submit">Sign Up</button>
         </form>
+        <p>Already have an account? <a href="/">Login</a></p>
     </div>
 </body>
 </html>
