--- a/real_time_screen_monitor/static/style.css
+++ b/real_time_screen_monitor/static/style.css
@@ -8,7 +8,7 @@ body {
 
 /* Centered form container */
 .container {
-    max-width: 400px; /* Set max-width smaller */
+    max-width: 400px;
     margin: 100px auto;
     padding: 20px;
     background-color: white;
@@ -20,17 +20,14 @@ body {
 h1, h2 {
     text-align: center;
     color: #043b48;
-    margin-bottom: 20px;
 }
 
 /* Form Fields */
 input[type="text"],
-input[type="email"],
-input[type="password"],
-textarea {
+input[type="password"] {
     width: 100%;
-    padding: 12px; /* Reduced padding */
-    margin-bottom: 10px; /* Reduced margin for compactness */
+    padding: 10px;
+    margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
@@ -67,13 +64,3 @@ a:hover {
     text-decoration: underline;
 }
 
-/* Adjust spacing between elements */
-.container label {
-    margin-bottom: 5px; /* Tighten the spacing */
-    font-weight: bold;
-}
-
-.container p {
-    margin-top: 10px; /* Space between button and link */
-    text-align: center;
-}
