--- a/real_time_screen_monitor/templates/index.html
+++ b/real_time_screen_monitor/templates/index.html
@@ -118,22 +118,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Social Network</title>
+    <title>Login</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <div class="container">
-        <h1>Login</h1>
-        <form action="/login" method="POST">
+        <form action="/" method="POST">
+            <h1>Login</h1>
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-
+            <input type="text" name="username" required>
+            
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-
+            <input type="password" name="password" required>
+            
             <button type="submit">Login</button>
+            <p>Don't have an account? <a href="/signup">Sign Up</a></p>
         </form>
-        <p>Don't have an account? <a href="/signup">Sign Up</a></p>
     </div>
 </body>
 </html>
