--- a/real_time_screen_monitor/templates/signup.html
+++ b/real_time_screen_monitor/templates/signup.html
@@ -80,26 +80,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - Social Network</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1>Sign Up</h1>
         <form action="/signup" method="POST">
+            <h1>Sign Up</h1>
             <label for="name">Full Name:</label>
-            <input type="text" id="name" name="name" required>
-
+            <input type="text" name="name" required>
+            
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-
+            <input type="text" name="username" required>
+            
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-
+            <input type="password" name="password" required>
+            
             <button type="submit">Sign Up</button>
+            <p>Already have an account? <a href="/">Login</a></p>
         </form>
-        <p>Already have an account? <a href="/">Login</a></p>
     </div>
 </body>
 </html>
