--- a/real_time_screen_monitor/templates/feed.html
+++ b/real_time_screen_monitor/templates/feed.html
@@ -20,24 +20,27 @@
         </form>
 
         <h2>Your Feed</h2>
-        <div id="posts">
+        <div class="posts">
             {% for post in posts %}
-                <div class="post" id="post_{{ post.id }}">
+                <div class="post">
                     <p><strong>{{ post.author }}</strong>: {{ post.content }}</p>
                     <p>Likes: {{ post.likes }} | Dislikes: {{ post.dislikes }}</p>
-                    <a href="/like/{{ post.id }}">Like</a>
-                    <a href="/dislike/{{ post.id }}">Dislike</a>
+                    <a href="/like/{{ loop.index0 }}">Like</a> |
+                    <a href="/dislike/{{ loop.index0 }}">Dislike</a> |
 
-                    <!-- Show delete button only if the logged-in user is the author -->
-                    {% if post.author == user['name'] %}
-                        <a href="/delete/{{ post.id }}" class="delete-button">Delete</a>
+                    <!-- Only show delete option if the logged-in user created the post -->
+                    {% if post.username == user['name'] %}
+                    <form action="/delete/{{ loop.index0 }}" method="POST" style="display:inline;">
+                        <button type="submit">Delete</button>
+                    </form>
                     {% endif %}
 
-                    <form action="/comment/{{ post.id }}" method="POST">
+                    <form action="/comment/{{ loop.index0 }}" method="POST" class="comment-form">
                         <input type="text" name="comment" placeholder="Write a comment..." required>
                         <button type="submit">Comment</button>
                     </form>
-                    <div>
+
+                    <div class="comments">
                         <h4>Comments:</h4>
                         <ul>
                             {% for comment in post.comments %}
